# Multi-Agent-Travel-Itinerary-Audio-Bot-

./: .env_template  .gitignore  MULTI_AGENT_GUIDED_PROJECT_PLAN.md  README.md  convert_plan.py  pyproject.toml  test_audio_simple.py
app/: __init__.py  chatbot_gradio_runner.py
data/: travel_bot_context.txt
genai_voice/: __init__.py  state.py
genai_voice/agents/: __init__.py  accommodation.py  activities.py  base.py  budget_agent.py  compiler.py  food.py  prompts.py  supervisor.py  transport.py
genai_voice/config/: __init__.py  defaults.py
genai_voice/graph/: __init__.py  build_graph.py  runner.py
genai_voice/models/: __init__.py  llm.py
genai_voice/processing/: __init__.py  audio.py
genai_voice/tools/: __init__.py  budget.py  weather.py  web_search.py
